--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
+# =========================================================
+# 🌐 JOBFIND - Monolithic Spring Boot Configuration
+# =========================================================
+
 spring.application.name=JOBFIND
 
-# Database
-spring.datasource.url=jdbc:mysql://localhost:3306/job_find
+
+server.port=8081
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/job_find?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Server (App Service)
-server.port=8081
 
-# Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=your-email@gmail.com
@@ -22,91 +26,27 @@ spring.mail.password=your-app-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Cloudinary
-cloudinary.cloud-name=YOUR_CLOUD_NAME
-cloudinary.api-key=YOUR_API_KEY
-cloudinary.api-secret=YOUR_API_SECRET
 
-# File Upload
+cloudinary.cloud_name=dwlhtcmjm
+cloudinary.api_key=	332976645974996
+cloudinary.api_secret=lIGlyqgqsdYwNHSuWUYillOBOSg
+
 spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB  
+spring.servlet.multipart.max-request-size=5MB
 
-# Gateway Config
-server.port: 7777
-spring.application:name: api-gateway
 
- cloud:gateway:routes:
-        - id: auth-service
-         - uri: http://localhost:7778
-          predicates:
-            - Path=/api/auth/**
-            
-        - id: jobseeker-service
-          uri: http://localhost:7779
-          predicates:
-            - Path=/api/job_Seekers/**
-            
-        - id: recruiter-service
-          uri: http://localhost:7780
-          predicates:
-            - Path=/api/recruiter/**
-            
-        - id: jobPost-service
-          uri: http://localhost:7781
-          predicates:
-            - Path=/api/jobPost/**
-            
-        - id: application-service
-          uri: http://localhost:7782
-          predicates:
-            - Path=/api/application/**
-            
-        - id: admin-service
-          uri: http://localhost:7783
-          predicates:
-            - Path=/api/admin/**
-            
-        - id: email-service
-          uri: http://localhost:7784
-          predicates:
-            - Path=/api/email/**
-            
-        - id: upload-service
-          uri: http://localhost:7785
-          predicates:
-            - Path=/api/upload/**
-            
-        - id: payment-service
-          uri: http://localhost:7786
-          predicates:
-            - Path=/api/payment/**
-            
-        - id: dashboard-service
-          uri: http://localhost:7787
-          predicates:
-            - Path=/api/dashboard/**
-            
-            
-            
-# Eureka Config
-server:port=7800
-spring:application:name=eureka-server
+logging.level.org.springframework=INFO
+logging.level.com.jobfind=DEBUG
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone:http://localhost:7800/eureka
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
 
-eureka.server.wait-time-in-ms-when-sync-empty=0
 
-#ConfigServer
-server:port:7850
-spring.application.name=config-server
-	spring.cloud.config.server.git.uri= https:/github.com/job_finding/JOBFIND-configs
-	spring.cloud.config.server.default-label=main
-	spring.cloud.config.server.git.clone-on-start=true
-	
-spring.application.name=auth-service
-spring.config.import=optional.configserver:http://localhost:7900
 
-eureka.client.service-url.defaultzone = http://localhost:7800/eureka
-	
+# ---------------------------
+# ⚙️ Optional Developer Notes
+# ---------------------------
+# 1️⃣ No Eureka / Config Server / API Gateway used
+# 2️⃣ Run directly from main() of your Spring Boot app
+# 3️⃣ Ensure MySQL is running locally (port 3306)
+# 4️⃣ Keep your credentials secure – use environment variables if deploying
